# notebooklm-llm-wiki-flow

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  LICENSE  Makefile  README.en.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
config/: project.example.yaml  project.yaml
config/prompts/: llm_wiki_priority.md  policy_compare.md
docs/: architecture.md  llm-wiki-ingestion-standard.md  obsidian-integration.md  quickstart-en.md  quickstart-ko.md  run-from-yaml.md
docs/plans/: 2026-04-17-fast-hardening-plan.md  2026-04-17-repo-scaffold.md
examples/: policy-compare-anthropic-openai-education.yaml
scripts/: bootstrap.sh  demo_policy_compare.sh  publish.sh
src/notebooklm_llm_wiki_flow/: ax_cli.py  claude_skill.py  cli.py  config.py  flow.py  flow_models.py  gemini_cli.py  index_builder.py  log_builder.py  mindmap_parser.py  models.py  notebooklm_client.py  obsidian_kit.py  persistence.py  policy_compare.py  report_parser.py  runner.py  template_renderer.py  wiki_builder.py  workflows.py
src/notebooklm_llm_wiki_flow/ax/: common.py  convert_docx.py  convert_hwpx.py  ingest.py  route.py
src/notebooklm_llm_wiki_flow/prompts/: llm_wiki_priority.md
src/notebooklm_llm_wiki_flow/skills/: note-wiki.md
templates/: comparison.md  entity.md  entity.md.j2  query.md  summary.md
tests/: test_ax.py  test_claude_skill.py  test_cli.py  test_config.py  test_flow_integration_fake_client.py  test_flow_phases.py  test_index_builder.py  test_log_builder.py  test_mindmap_parser.py  test_obsidian_kit.py  test_persistence.py  test_policy_compare.py  test_report_parser.py  test_run_from_yaml.py  test_runner_protocol.py  test_template_renderer.py  test_wiki_builder.py
tests/fakes/: fake_notebooklm_client.py
