[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-llm-wiki-flow"
version = "0.1.0"
description = "Portable NotebookLM → LLM Wiki → Obsidian → qmd workflow scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Moon Jeong"},
]
dependencies = [
  "typer>=0.16.0",
  "PyYAML>=6.0.2",
  "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "types-PyYAML>=6.0.12.20250516",
  "pre-commit>=4.2.0",
]

[project.scripts]
nlwflow = "notebooklm_llm_wiki_flow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/notebooklm_llm_wiki_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=notebooklm_llm_wiki_flow --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/notebooklm_llm_wiki_flow"]
strict = true
