[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-llm-wiki-flow"
version = "0.1.0"
description = "Portable NotebookLM → LLM Wiki → Obsidian → qmd workflow scaffold"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
  {name = "Moon Jeong"},
]
# Core nlwflow workflow는 ax/* 서브패키지 없이도 동작하도록 base deps는 lean하게 유지.
# AX administrative converters와 Gemini 직결 CLI가 필요하면 [ax] extras 설치.
dependencies = [
  "typer>=0.16.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
  "Jinja2>=3.1.4",
  "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "types-PyYAML>=6.0.12.20250516",
  "pre-commit>=4.2.0",
]
notebooklm = [
  "notebooklm-py",
  "playwright>=1.40",
]
# AX administrative tooling (DOCX/HWPX 변환, Gemini 분류·CLI)
ax = [
  "python-docx>=1.1.0",
  "google-genai>=2.3.0",
]

[project.scripts]
nlwflow = "notebooklm_llm_wiki_flow.cli:app"
# bug_017: 'gemini'는 Google 공식 @google/gemini-cli와 PATH 충돌하므로 nlwflow-gemini로 명명.
nlwflow-gemini = "notebooklm_llm_wiki_flow.gemini_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/notebooklm_llm_wiki_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=notebooklm_llm_wiki_flow --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
files = ["src/notebooklm_llm_wiki_flow"]
strict = true
